<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/lbl_equipment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">


        <TableRow android:id="@+id/row_select_customer">

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lbl_customer"
                android:textSize="@dimen/label" />

            <Spinner
                android:id="@+id/spinner_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_span="2"
                android:textAllCaps="false"
                android:textSize="@dimen/field" />
        </TableRow>


        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lbl_serial_number"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/serial_number"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_serial_number"
                android:inputType="text"
                android:textAllCaps="false"
                android:textSize="@dimen/field" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:text="@string/lbl_comment"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/comment"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_comment"
                android:inputType="text"
                android:textAllCaps="false"
                android:textSize="@dimen/field" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lbl_lat"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/lat"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_lat"
                android:inputType="numberSigned|numberDecimal"
                android:textAllCaps="false"
                android:textSize="@dimen/field" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lbl_lng"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/lng"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_lng"
                android:inputType="numberSigned|numberDecimal"
                android:textAllCaps="false"
                android:textSize="@dimen/field" />
        </TableRow>

        <TableRow android:paddingBottom="10dp">

            <Button
                android:id="@+id/btn_setpos"
                style="@style/button"
                android:layout_gravity="center"
                android:layout_span="2"
                android:drawableStart="@drawable/ic_mylocation"
                android:text="@string/lbl_btn_setpos" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_update"
                style="@style/button"
                android:layout_gravity="center"
                android:layout_span="2"
                android:drawableStart="@drawable/ic_update"
                android:text="@string/lbl_btn_update" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btn_viewonmap"
        android:layout_width="@dimen/btn"
        android:layout_height="@dimen/btn"
        android:layout_marginEnd="@dimen/btn_margin"
        android:layout_marginBottom="@dimen/btn_margin"
        android:background="@drawable/btn_viewonmap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>