<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/lbl_ticket"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/serial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subject"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serial_number" />

    <Button
        android:id="@+id/btn_open"
        style="@style/button"
        android:layout_gravity="bottom"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_lock_open"
        android:gravity="center"
        android:text="@string/lbl_btn_open"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_close"
        style="@style/button"
        android:layout_gravity="bottom"
        android:layout_marginRight="10dp"
        android:drawableStart="@drawable/ic_lock_close"
        android:gravity="center"
        android:text="@string/lbl_btn_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- An horizontal line -->
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorLine"
        app:layout_constraintTop_toBottomOf="@id/subject" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toBottomOf="@id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />
    <!-- android:stackFromBottom="true" -->

    <!-- An horizontal line -->
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorLine"
        app:layout_constraintBottom_toTopOf="@id/form_post_msg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/form_post_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/message_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/hint_input_msg"
                android:maxLines="6" />

            <Button
                android:id="@+id/btn_send"
                style="@style/button"
                android:layout_gravity="bottom"
                android:drawableStart="@drawable/ic_sendmsg"
                android:gravity="center"
                android:text="@string/lbl_btn_send" />
        </TableRow>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>