<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/lbl_equipment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/lbl_serial_number"
                android:textSize="@dimen/label" />

            <EditText
                android:id="@+id/serial_number"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_serial_number"
                android:inputType="text"
                android:textAllCaps="false"
                android:textSize="@dimen/field" />
        </TableRow>
    </TableLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table" />

    <Button
        android:id="@+id/btn_setpos"
        android:layout_width="@dimen/btn"
        android:layout_height="@dimen/btn"
        android:layout_marginEnd="@dimen/btn_margin"
        android:layout_marginBottom="@dimen/btn_margin2"
        android:background="@drawable/btn_setpos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="@dimen/btn"
        android:layout_height="@dimen/btn"
        android:layout_marginEnd="@dimen/btn_margin"
        android:layout_marginBottom="@dimen/btn_margin"
        android:background="@drawable/btn_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>